--- a/style.css
+++ b/style.css
@@ -1,11 +1,80 @@
-body, html {
+* {
   margin: 0;
   padding: 0;
-  height: 100%;
-  overflow: hidden;
-  background-color: #87CEEB; /* Light Sky Blue */
+  box-sizing: border-box;
 }
 
-canvas {
-  display: block;
+body {
+  font-family: 'Arial', sans-serif;
+  background: linear-gradient(135deg, #21275d, #822310e3);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(159, 161, 154);
+}
+
+.container {
+  width: 100%;
+  max-width: 400px;
+  background-color: rgba(0, 0, 0, 0.659);
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+}
+
+.title {
+  text-align: center;
+  font-size: 2.5rem;
+  color: #0066ff;
+}
+
+.highlight {
+  color: #c7d44e;
+}
+
+.subtitle {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 1rem;
+  color: #ff6200;
+}
+
+.input-field {
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0;
+  background-color: #6d767e98;
+  border: none;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+}
+
+.input-field:focus {
+  outline: none;
+  border: 2px solid #f3a712;
+}
+
+.submit-btn {
+  width: 100%;
+  padding: 15px;
+  background-color: #f3a712;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit-btn:hover {
+  background-color: #e69a07;
+}
+
+.error-message {
+  text-align: center;
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 10px;
 }
